[package]
name = "regexer"
description = "run a series of regex commands on a source document."
version = "0.0.0-indev"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
log = "0.4.29"
onlyargs = "0.2.0"
onlyargs_derive = "0.2.0"
regex = "1.12.2"
simple_logger = { version = "5.1.0", default-features = false, features = ["colors"] }
